--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -37,7 +37,7 @@
                                     <div class="img-contant">
                                         <h5>Have any questions?</h5>
                                                        <div class="button-row">
-                                        <a routerLink="/book-a-session-with-kenny-weiss" class="button">
+                                        <a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" class="button">
                                             book a call with Kenny <span class="arrow"><i
                                                     class="fa-solid fa-arrow-right"></i></span>
                                         </a>
