--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -52,7 +52,7 @@
                                             <li><span class="icon fa fa-calendar"></span>24th March 2022</li>
                                             <div class="buttonsser">
                                                 <a routerLink="/courses" routerLinkActive="active"> See All Courses</a>
-                                                <a routerLink="/book-a-session-with-kenny-weiss" routerLinkActive="active"> Book a Session
+                                                <a target="_blank" href="https://calendly.com/kennyweiss/single-session-350?month=2022-05" routerLinkActive="active"> Book a Session
                                                     with Kenny Weiss</a>
                                             </div>
                                         </ul>
@@ -116,7 +116,7 @@
                                     <div class="img-contant">
                                           <h5>Have any questions?</h5>
                                         <div class="button-row">
-                                        <a routerLink="/book-a-session-with-kenny-weiss" class="button">
+                                        <a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" class="button">
                                             book a call with Kenny <span class="arrow"><i
                                                     class="fa-solid fa-arrow-right"></i></span>
                                         </a>
