--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -91,7 +91,7 @@
                             disconnected from your authentic self. Download
                             it below to get started.</p>
                         <div class="button-row canter">  
-                                <a routerLink="/book-a-session-with-kenny-weiss" class="button while"> Book a call with Kenny</a>
+                                <a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" class="button while"> Book a call with Kenny</a>
                         </div>
                     </div>
 
