--- a/src/app/layout/healing-services/healing-services.component.html
+++ b/src/app/layout/healing-services/healing-services.component.html
@@ -40,7 +40,7 @@
                         <div class="buttonsser">
                             <a routerLink="/courses" routerLinkActive="active">
                                 See All Courses</a>
-                            <a routerLink="/book-a-session-with-kenny-weiss"
+                            <a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank"
                                 routerLinkActive="active"> Book a Session with
                                 Kenny Weiss</a>
                         </div>
