--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -9,7 +9,7 @@
                 <h1>{{ service.acf?.as_parent_heading }}</h1>
                 <div [innerHTML]="service.acf?.intro_discription"></div>
 
-                <a class="button" routerLink="/book-a-session-with-kenny-weiss">{{ service.acf?.intro_button }}</a>
+                <a class="button" href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank">{{ service.acf?.intro_button }}</a>
 
 
             </div>
@@ -164,7 +164,7 @@
                             <p class="b">🤝 Book a Session</p>
                         </td>
                         <td>Book a Session with Kenny directly to understand what’s right for you</td>
-                        <td><a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session</a></td>
+                        <td><a class="button" href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank">Book a Session</a></td>
                     </tr>
                 </tbody>
             </table>
