--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -13,7 +13,7 @@
                             misery.</p>
                         <div class="button-row">
                             <a class="button whitebt" routerLink="/courses">Explore courses</a>
-                            <a class="button whitebt" routerLink="/book-a-session-with-kenny-weiss">Book a session with Kenny</a>
+                            <a class="button whitebt" href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank">Book a session with Kenny</a>
                         </div>
 
 
@@ -138,7 +138,7 @@
                     <p><b>Because you’re not broken. You’re just unfinished. And healing those unfinished parts can
                             change everything about how you love and connect.</b></p>
 
-                    <a href="/book-a-session-with-kenny-weiss" class="button">Start Healing What Was Left Unfinished</a>
+                    <a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" class="button">Start Healing What Was Left Unfinished</a>
  
 </div>
                 <button (click)="toggleContent()" class="read-more-btn" id="toggleBtn"> {{ isExpanded ? 'Read Less' :
@@ -229,7 +229,7 @@
                             </li>
                             <div class="button-row" data-aos="fade-up" data-aos-duration="600">
                                 <a class="button" routerLink="/about-kenny-weiss">Read Kenny’s Story</a>
-                                <a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session With Kenny</a>
+                                <a class="button" href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank">Book a Session With Kenny</a>
                             </div>
                         </ul>
 
@@ -390,7 +390,7 @@
                         <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                             from the past so they can once again love themselves. </p>
                         <div class="button-row canter">
-                            <a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session With Kenny</a>
+                            <a class="button" href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank">Book a Session With Kenny</a>
                         </div>
                     </div>
 
@@ -444,7 +444,7 @@
                         <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                             from the past so they can once again love themselves. </p>
                         <div class="button-row canter">
-                            <a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session With Kenny</a>
+                            <a class="button" href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank">Book a Session With Kenny</a>
                         </div>
                     </div>
 
