--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -172,7 +172,7 @@
                             </li>
                             <div class="button-row">
                                 <!-- <a class="button" href="meet-kenny.html">Read Kenny’s Story</a> -->
-                                <a class="button" routerLink="/book-a-session-with-kenny-weiss">Book a Session</a>
+                                <a class="button" href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank">Book a Session</a>
                             </div>
                         </ul>
                     </div>
@@ -270,7 +270,7 @@
                         </div>
                     </div>
 
-                    <a routerLink="/book-a-session-with-kenny-weiss" class="button">Book a session with Kenny</a>
+                    <a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" class="button">Book a session with Kenny</a>
                 </div>
             </div>
 
@@ -375,7 +375,7 @@
                         facility. He has met many of the counselors and highly recommends them if you or a loved one
                         is struggling with an addiction. Watch Kenny’s video to hear the story.</p>
 
-                    <a routerLink="/book-a-session-with-kenny-weiss" class="button mt-3">Book a session with Kenny</a>
+                    <a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" class="button mt-3">Book a session with Kenny</a>
 
 
                 </div>
@@ -407,7 +407,7 @@
                     <p>It’s where <b>inner work meets brain science —</b> and the results are
                         life-changing.</p>
 
-                    <a routerLink="/book-a-session-with-kenny-weiss" class="button mt-3">Book a session with Kenny</a>
+                    <a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" class="button mt-3">Book a session with Kenny</a>
 
 
                 </div>
