--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -39,7 +39,7 @@
 
                     <div class="button-row">
                         <a class=" button" routerLink="/courses" target="">Explore the Emotional Authenticity Method</a>
-                        <a class="button" routerLink="/book-a-session-with-kenny-weiss" target="_blank">Book A Session With Kenny</a>
+                        <a class="button" href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" target="_blank">Book A Session With Kenny</a>
                     </div>
 
                 </div>
