--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -56,7 +56,7 @@
                 <li class="mb4"><a routerLink="/contact" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Contact</a></li> 
                         
-                <li><a routerLink="/book-a-session-with-kenny-weiss" class="contact-nav">Book a Session</a></li>
+                <li><a href="https://calendly.com/kennyweiss/single-session-350?month=2025-09" target="_blank" class="contact-nav">Book a Session</a></li>
             </ul>
 
 
