--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -1,8 +1,7 @@
 <div *ngIf="loading" class="loader-maim">
     <div class="hm-spinner"></div>
-</div>
-<app-not-found *ngIf="showNotFound"></app-not-found>
-<main class="mt emonastiolser " *ngIf="!loading && !showNotFound">
+</div> 
+<main class="mt emonastiolser " *ngIf="!loading">
     <section id="top0" class="kanny-content" >
         <div class="container">
             <div class="contentallkanny">
