--- a/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
+++ b/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
@@ -1,8 +1,7 @@
 <div *ngIf="loading" class="loader-maim">
     <div class="hm-spinner"></div>
 </div>
-<app-not-found *ngIf="!loading && showNotFound"></app-not-found>
-<main class="pt-1 blogdetailspage" *ngIf="!loading && !showNotFound && wdcpost">
+<main class="pt-1 blogdetailspage" *ngIf="!loading">
     <div class="bg-gry colorlink">
         <div class="container">
             <div class="grid2">
